[gd_scene load_steps=2 format=3 uid="uid://i3rnhduyaer8"]

[ext_resource type="Script" path="res://main scene/main_scene.gd" id="1_33xss"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_33xss")
metadata/_edit_vertical_guides_ = [1154.0, 1153.0, 1153.0]
metadata/_edit_horizontal_guides_ = [98.0, 650.0]

[node name="background_totem_panel" type="Panel" parent="."]
offset_left = 2.0
offset_right = 160.0
offset_bottom = 502.0

[node name="menu_Button" type="Button" parent="."]
offset_left = 2.0
offset_top = 508.0
offset_right = 159.0
offset_bottom = 568.0

[node name="Label" type="Label" parent="menu_Button"]
layout_mode = 0
offset_right = 155.0
offset_bottom = 65.0
text = "menu"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="RunInfo_Button" type="Button" parent="."]
offset_left = 2.0
offset_top = 577.0
offset_right = 159.0
offset_bottom = 637.0

[node name="Label" type="Label" parent="RunInfo_Button"]
layout_mode = 0
offset_right = 156.0
offset_bottom = 64.0
text = "Run Info"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="background_combo_panel" type="Panel" parent="."]
offset_left = 163.0
offset_top = 506.0
offset_right = 397.0
offset_bottom = 638.0

[node name="background_counter_panel" type="Panel" parent="."]
offset_left = 402.0
offset_top = 10.0
offset_right = 748.0
offset_bottom = 87.0

[node name="Counter" type="Label" parent="background_counter_panel"]
layout_mode = 0
offset_right = 344.0
offset_bottom = 72.0
metadata/_edit_lock_ = true

[connection signal="pressed" from="menu_Button" to="." method="_on_menu_button_pressed"]
